--- a/Notes/CG.html
+++ b/Notes/CG.html
@@ -143,11 +143,11 @@
                     3D transformations, OpenGL geometric transformations functions </p>
 
                 <div>
-                    <a class="btn btn-primary download-btn" href="#" download>Download PDF</a>
+                    <a class="btn btn-primary download-btn" href="../assests/cg module2.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module2-viewer')">View
                         PDF</button>
                 </div>
-                <iframe id="module2-viewer" class="pdf-viewer" src="./assests/module2.pdf"></iframe>
+                <iframe id="module2-viewer" class="pdf-viewer" src="../assests/cg module2.pdf"></iframe>
             </div>
             <div class="module" id="module3">
                 <h4>Module 3</h4>
