--- a/Notes/fsd.html
+++ b/Notes/fsd.html
@@ -142,10 +142,10 @@
                     <p>Form Processing, Creating Feedback forms, Form submissions, custom validation, creating Model Forms, 
                     URLConf Ticks, Including Other URLConfs.</p>
                 <div class="buttons">
-                    <a class="btn btn-primary download-btn" href="./assests/module3.pdf" download>Download PDF</a>
+                    <a class="btn btn-primary download-btn" href="../assests/FSD module 3.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module3-viewer')">View PDF</button>
                 </div>
-                <iframe id="module3-viewer" class="pdf-viewer" src="./assests/module3.pdf"></iframe>
+                <iframe id="module3-viewer" class="pdf-viewer" src="../assests/FSD module 3.pdf"></iframe>
             </div>
             <div class="module" id="module4">
                 <h4>Module 4</h4>
