--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h1 class="display-4 fw-bold typing-text">Computer Science & Engineering</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4 welcome ">Welcome to our website, where we are on a mission to provide Best Resources like
-        Notes, Important Questions, Projects for Mainly 21 Scheme CSE</p>
+        Notes, Important Questions, Projects for Mainly 21 Scheme CSE Join <b> Whatsapp</b> Support Us If Any Queries Are there You Can Ask There</p>
     </div>
     <div  class="overflow-hidden " style="position: relative;">
       <div class="container px-5">
