--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-adsense-account" content="ca-pub-5305831131761128">
+  <meta name="description" content="Find the best resources like notes, important questions, projects, and more for VTU CSE 21 Scheme students.">
   <title>VTU 21 Scheme Hub</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="index.css">
