--- a/Notes/ACA.html
+++ b/Notes/ACA.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACA Notes</title>
+    <title>Advanced Computer Architecture Notes</title>
     <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../notes.css">
     <link rel="stylesheet" href="../index.css">
