--- a/Notes/fsd.html
+++ b/Notes/fsd.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEPM Notes</title>
+    <title>Full Stack Development Notes</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/notes.css">
