--- a/lab.html
+++ b/lab.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VTU 21 Scheme Hub</title>
+  <title>VTU 21 Scheme Hub LAB</title>
   <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="index.css">
