--- a/Question-paper/fullstack.html
+++ b/Question-paper/fullstack.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="google-adsense-account" content="ca-pub-5305831131761128">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Full stack Development QP</title>
   <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
