--- a/Notes/fsd.html
+++ b/Notes/fsd.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-5305831131761128">
     <title>Full Stack Development Notes</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
