--- a/Projects/cgproject.html
+++ b/Projects/cgproject.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-adsense-account" content="ca-pub-5305831131761128">
   <title>VTU 21 Scheme Hub</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="../index.css">
+
   <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
