--- a/lab.html
+++ b/lab.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-adsense-account" content="ca-pub-5305831131761128">
   <title>VTU 21 Scheme Hub LAB</title>
   <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./style.css">
