--- a/Notes/fsd.html
+++ b/Notes/fsd.html
@@ -8,6 +8,8 @@
     <title>Full Stack Development Notes</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305831131761128"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../CSS/notes.css">
     <link rel="stylesheet" href="../index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
