--- a/Projects/Mainmini.html
+++ b/Projects/Mainmini.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="../index.css">
     <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305831131761128"
+     crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
