--- a/Question-paper/software.html
+++ b/Question-paper/software.html
@@ -9,6 +9,8 @@
   <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="../index.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305831131761128"
+     crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
