--- a/syllabus.html
+++ b/syllabus.html
@@ -9,6 +9,8 @@
     <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="syl.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305831131761128"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
     <style>
         .embed-responsive-16by9 {
