--- a/Notes/ACA.html
+++ b/Notes/ACA.html
@@ -169,6 +169,7 @@
                     Vector Processing, Scalable, Multithreaded, and Dataflow Architectures, Latency-Hiding Techniques,
                     Principles of Multithreading, Fine- Grain Multicomputers. For all Algorithms or mechanisms any one
                     example is sufficient. </p>
+                    <p style="color: red; font-weight: 800;">Coming Soon...</p>
                     <div>
                 <a class="btn btn-primary download-btn" href="./assests/module4.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module4-viewer')">View PDF</button></div>
@@ -184,6 +185,7 @@
                     Problem Definition, Model of a Typical Processor, Compiler-detected Instruction Level Parallelism
                     ,Operand Forwarding ,Reorder Buffer, Register Renaming ,Tomasulo's Algorithm. For all Algorithms or
                     mechanisms any one example is sufficient. </p>
+                    <p style="color: red; font-weight: 800;">Coming Soon...</p>
                     <div>
                 <a class="btn btn-primary download-btn" href="./assests/module5.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module5-viewer')">View PDF</button></div>
