--- a/Notes/CG.html
+++ b/Notes/CG.html
@@ -162,8 +162,9 @@
                 <p><b>Computer Animation :</b>Design of Animation Sequences, Traditional Animation Techniques, General
                     Computer-Animation Functions, Computer-Animation Languages, Character Animation, Periodic
                     Motions, OpenGL Animation Procedures.</p>
-
+                    
                 </p>
+                <p style="color: red; font-weight: 800;">Coming Soon...</p>
                 <div>
                     <a class="btn btn-primary download-btn" href="./assests/module3.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module3-viewer')">View
@@ -177,6 +178,7 @@
                     representation, types of images.</p>
                    <p><b> Digital Image Processing Operations:</b> Basic relationships and distance metrics, Classification of Image 
                     processing Operations </p>
+                    <p style="color: red; font-weight: 800;">Coming Soon...</p>
                 <div>
                     <a class="btn btn-primary download-btn" href="./assests/module4.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module4-viewer')">View
@@ -189,6 +191,7 @@
                 <p><b> Image Segmentation:</b>
                     Introduction, classification, detection of discontinuities, Edge detection (up to 
 canny edge detection(included)).  </p>
+<p style="color: red; font-weight: 800;">Coming Soon...</p>
                 <div>
                     <a class="btn btn-primary download-btn" href="./assests/module5.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module5-viewer')">View
