--- a/lab.html
+++ b/lab.html
@@ -127,10 +127,10 @@
         <!-- ------------- -->
         <h4>Fullstack Development</h4>
 
-        <div><a class="btn btn-primary download-btn" href="path/to/manual2.pdf" download>Download PDF</a>
+        <div><a class="btn btn-primary download-btn" href="./assests/FSD lab manual.pdf" download>Download PDF</a>
           <button class="btn btn-secondary view-btn" onclick="toggleViewer('manual2-viewer')">View PDF</button>
         </div>
-        <iframe id="manual2-viewer" class="pdf-viewer" src="path/to/manual2.pdf"></iframe>
+        <iframe id="manual2-viewer" class="pdf-viewer" src="./assests/FSD lab manual.pdf"></iframe>
       </div>
     </div>
   </div>
