--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4 welcome ">Welcome to our website, where we are on a mission to provide Best Resources like
         Notes, Important Questions, Projects for Mainly 21 Scheme CSE Join <b> Whatsapp</b> Support Us If Any Queries Are there You Can Ask There</p>
+        <p style="color:purple; font-weight: 800; font-size: larger;">Very Imp Questions Are On The Way Stay Tuned...</p>
     </div>
     <div  class="overflow-hidden " style="position: relative;">
       <div class="container px-5">
