--- a/Notes/CG.html
+++ b/Notes/CG.html
@@ -164,13 +164,13 @@
                     Motions, OpenGL Animation Procedures.</p>
                     
                 </p>
-                <p style="color: red; font-weight: 800;">Coming Soon...</p>
+               
                 <div>
-                    <a class="btn btn-primary download-btn" href="./assests/module3.pdf" download>Download PDF</a>
+                    <a class="btn btn-primary download-btn" href="../assests/Module 3 CG.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module3-viewer')">View
                         PDF</button>
                 </div>
-                <iframe id="module3-viewer" class="pdf-viewer" src="./assests/module3.pdf"></iframe>
+                <iframe id="module3-viewer" class="pdf-viewer" src="../assests/Module 3 CG.pdf"></iframe>
             </div>
             <div class="module" id="module4">
                 <h4>Module 4</h4>
