--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             border-radius: 10px;
             background: #fff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 80%;
+            width: 90vw;
             max-width: 800px;
             background: rgba(255, 255, 255, 0.9);
             backdrop-filter: blur(10px);
