--- a/Notes/CG.html
+++ b/Notes/CG.html
@@ -178,13 +178,13 @@
                     representation, types of images.</p>
                    <p><b> Digital Image Processing Operations:</b> Basic relationships and distance metrics, Classification of Image 
                     processing Operations </p>
-                    <p style="color: red; font-weight: 800;">Coming Soon...</p>
+                
                 <div>
-                    <a class="btn btn-primary download-btn" href="./assests/module4.pdf" download>Download PDF</a>
+                    <a class="btn btn-primary download-btn" href="../assests/Module 4 CG.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module4-viewer')">View
                         PDF</button>
                 </div>
-                <iframe id="module4-viewer" class="pdf-viewer" src="./assests/module4.pdf"></iframe>
+                <iframe id="module4-viewer" class="pdf-viewer" src="../assests/Module 4 CG.pdf"></iframe>
             </div>
             <div class="module" id="module5">
                 <h4>Module 5</h4>
