--- a/Notes/SEPM.html
+++ b/Notes/SEPM.html
@@ -150,10 +150,10 @@
                 <p><b> Principles that guide practice:</b> Software Engineering Knowledge, Core principles, Principles
                     that
                     guide each framework activity</p>
-                    <p style="color: red; font-weight: 800;">Coming Soon...</p>
-              <div>  <a class="btn btn-primary download-btn" href="./assests/module3.pdf" download>Download PDF</a>
+                   
+              <div>  <a class="btn btn-primary download-btn" href="../assests/Module 3 SEPM.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module3-viewer')">View PDF</button></div>
-                <iframe id="module3-viewer" class="pdf-viewer" src="./assests/module3.pdf"></iframe>
+                <iframe id="module3-viewer" class="pdf-viewer" src="../assests/Module 3 SEPM.pdf"></iframe>
             </div>
             <div class="module" id="module4">
                 <h4>Module 4</h4>
