--- a/Notes/SEPM.html
+++ b/Notes/SEPM.html
@@ -164,9 +164,9 @@
                     Management and Management Control, Project Management life cycle, Traditional versus Modern
                     Project Management Practices. </p>
                     <p style="color: red; font-weight: 800;">Coming Soon...</p>
-               <div> <a class="btn btn-primary download-btn" href="./assests/module4.pdf" download>Download PDF</a>
+               <div> <a class="btn btn-primary download-btn" href="../assests/Module 4 SEPM.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module4-viewer')">View PDF</button></div>
-                <iframe id="module4-viewer" class="pdf-viewer" src="./assests/module4.pdf"></iframe>
+                <iframe id="module4-viewer" class="pdf-viewer" src="../assests/Module 4 SEPM.pdf"></iframe>
             </div>
             <div class="module" id="module5">
                 <h4>Module 5</h4>
