--- a/Notes/21ME652.html
+++ b/Notes/21ME652.html
@@ -114,12 +114,12 @@
             </div>
         </div>
     </nav>
-    <p style="text-align: center; font-size: 30px; color:#2A3D45; font-weight: 600;"> Full Stack Development - 21CS62</p>
+    <p style="text-align: center; font-size: 30px; color:#2A3D45; font-weight: 600;"> Renewable Energy And Power Plant - 21ME652</p>
     <div class="container">
         <div class="module-container">
             <div class="module" id="module1">
                 <h4>Module 1</h4>
-                <p>Introduction: Energy sources (including fossil fuels and nuclear energy), India’s production and reserves of 
+                <p>Introduction: Energy sources (including fossil fuels and nuclear energy), India's production and reserves of 
                     commercial energy sources, need for nonconventional energy sources, energy alternatives, Indian and global energy 
                     scenario.  <br>
                     Solar Radiation & Measurement: Extra-Terrestrial radiation, spectral distribution of extra-terrestrial radiation, 
