--- a/Notes/ACA.html
+++ b/Notes/ACA.html
@@ -169,11 +169,11 @@
                     Vector Processing, Scalable, Multithreaded, and Dataflow Architectures, Latency-Hiding Techniques,
                     Principles of Multithreading, Fine- Grain Multicomputers. For all Algorithms or mechanisms any one
                     example is sufficient. </p>
-                    <p style="color: red; font-weight: 800;">Coming Soon...</p>
+         
                     <div>
-                <a class="btn btn-primary download-btn" href="./assests/module4.pdf" download>Download PDF</a>
+                <a class="btn btn-primary download-btn" href="../assests/module 4 imp.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module4-viewer')">View PDF</button></div>
-                <iframe id="module4-viewer" class="pdf-viewer" src="./assests/module4.pdf"></iframe>
+                <iframe id="module4-viewer" class="pdf-viewer" src="../assests/module 4 imp.pdf"></iframe>
             </div>
             <div class="module" id="module5">
                 <h4>Module 5</h4>
@@ -185,11 +185,11 @@
                     Problem Definition, Model of a Typical Processor, Compiler-detected Instruction Level Parallelism
                     ,Operand Forwarding ,Reorder Buffer, Register Renaming ,Tomasulo's Algorithm. For all Algorithms or
                     mechanisms any one example is sufficient. </p>
-                    <p style="color: red; font-weight: 800;">Coming Soon...</p>
+
                     <div>
-                <a class="btn btn-primary download-btn" href="./assests/module5.pdf" download>Download PDF</a>
+                <a class="btn btn-primary download-btn" href="../assests/module 5 imp.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module5-viewer')">View PDF</button></div>
-                <iframe id="module5-viewer" class="pdf-viewer" src="./assests/module5.pdf"></iframe>
+                <iframe id="module5-viewer" class="pdf-viewer" src="../assests/module 5 imp.pdf"></iframe>
             </div>
         </div>
     </div>
