--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-body-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">VTU CSE 21 </a>
+      <a class="navbar-brand" href="index.html">VTU CSE 21 </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse nav2" id="navbarNavDropdown">
+      <div class="collapse navbar-collapse nav2 text-center" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
@@ -34,6 +34,9 @@
           <li class="nav-item">
             <a class="nav-link" href="./qp.html">Question Paper</a>
           </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="./imp.html">Very IMP Questions</a>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="./lab.html">Lab Manuals</a>
           </li>
