--- a/Projects/bothprojects.html
+++ b/Projects/bothprojects.html
@@ -61,6 +61,9 @@
             <a class="nav-link" href="../qp.html">Question Paper</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="../imp.html">Very IMP Questions</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="../lab.html">Lab Manuals</a>
           </li>
           <li class="nav-item">
