--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           <li class="nav-item">
             <a class="nav-link" href="./qp.html">Question Paper</a>
           </li>
-          <!-- <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="./imp.html">Very IMP Questions</a>
-          </li> -->
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="./lab.html">Lab Manuals</a>
           </li>
