--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
   <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305831131761128"
      crossorigin="anonymous"></script>
+     <style>
+    @keyframes blink-size {
+  0%, 100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  50% {
+    opacity: 0;
+    transform: scale(1.1);
+  }
+}
+
+.typing-imp {
+  animation: blink-size 3s infinite;
+ 
+}
+
+
+     </style>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -24,7 +43,7 @@
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse nav2 text-center" id="navbarNavDropdown">
+      <div class="collapse navbar-collapse nav2 " id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
@@ -35,7 +54,7 @@
             <a class="nav-link" href="./qp.html">Question Paper</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./imp.html">Very IMP Questions</a>
+            <a class="nav-link " style="color: rgb(249, 255, 72) !important;" href="./imp.html"><b>Very IMP Questions</b></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./lab.html">Lab Manuals</a>
@@ -52,10 +71,11 @@
   </nav>
   <div class="px-4 pt-5 my-5 text-center border-bottom " style="background-color: #ECE2D0;">
     <h1 class="display-4 fw-bold typing-text">Computer Science & Engineering</h1>
+    <p class="typing-imp" style="color:rgba(255, 102, 68, 0.86);  font-weight: 800; font-size: 25px;">Very Imp Questions Are Out Now Checkout!!...</p>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4 welcome ">Welcome to our website, where we are on a mission to provide Best Resources like
         Notes, Important Questions, Projects for Mainly 21 Scheme CSE Join <b> Whatsapp</b> Support Us If Any Queries Are there You Can Ask There</p>
-        <p style="color:purple; font-weight: 800; font-size: larger;">Very Imp Questions Are On The Way Stay Tuned...</p>
+        
     </div>
     <div  class="overflow-hidden " style="position: relative;">
       <div class="container px-5">
