--- a/qp.html
+++ b/qp.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="./qp.html">Question Paper</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./imp.html">Very IMP Questions</a>
+                        <a class="nav-link" style="color: rgb(249, 255, 72) !important;" href="./imp.html">Very IMP Questions</a>
                       </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./lab.html">Lab Manuals</a>
