--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </nav>
   <div class="px-4 pt-5 my-5 text-center border-bottom " style="background-color: #ECE2D0;">
     <h1 class="display-4 fw-bold typing-text">Computer Science & Engineering</h1>
-    <p class="typing-imp" style="color:rgba(255, 102, 68, 0.86);  font-weight: 800; font-size: 25px;">Very Imp Questions Are Out Now Checkout!!...</p>
+    <p class="typing-imp" style="color:rgb(255, 102, 68);  font-weight: 800; font-size: 25px;">Very Imp Questions Are Out Now Checkout!!...</p>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4 welcome ">Welcome to our website, where we are on a mission to provide Best Resources like
         Notes, Important Questions, Projects for Mainly 21 Scheme CSE Join <b> Whatsapp</b> Support Us If Any Queries Are there You Can Ask There</p>
