--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <p class="typing-imp" style="color:rgb(255, 102, 68);  font-weight: 800; font-size: 25px;">Very Imp Questions Are Out Now Checkout!!...</p>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4 welcome ">Welcome to our website, where we are on a mission to provide Best Resources like
-        Notes, Important Questions, Projects for Mainly 21 Scheme CSE Join <b> Whatsapp</b> Support Us If Any Queries Are there You Can Ask There</p>
+        Notes, Important Questions, Projects for Mainly 21 Scheme CSE Join <b> <a style="text-decoration: none !important; color: rgb(113, 202, 122);" href="https://chat.whatsapp.com/GE41XVeiIpvAKSPMi1BMiq">WhatsApp</a></b> Support Us If Any Queries Are there You Can Ask There</p>
         
     </div>
     <div  class="overflow-hidden " style="position: relative;">
