--- a/Notes/CG.html
+++ b/Notes/CG.html
@@ -194,13 +194,13 @@
                 <p><b> Image Segmentation:</b>
                     Introduction, classification, detection of discontinuities, Edge detection (up to 
 canny edge detection(included)).  </p>
-<p style="color: red; font-weight: 800;">Coming Soon...</p>
+
                 <div>
-                    <a class="btn btn-primary download-btn" href="./assests/module5.pdf" download>Download PDF</a>
+                    <a class="btn btn-primary download-btn" href="../assests/Module 5 CG.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module5-viewer')">View
                         PDF</button>
                 </div>
-                <iframe id="module5-viewer" class="pdf-viewer" src="./assests/module5.pdf"></iframe>
+                <iframe id="module5-viewer" class="pdf-viewer" src="../assests/Module 5 CG.pdf"></iframe>
             </div>
         </div>
     </div>
