--- a/imp.html
+++ b/imp.html
@@ -126,12 +126,11 @@
         </div>
         <iframe id="manual1-viewer" class="pdf-viewer" src="./assests/SEPM IMP.pdf"></iframe>
       </div>
+
       <div class="manual" id="manual2">
 
-
-        <!-- ------------- -->
         <h4>Fullstack Development - 21CS62</h4>
-
+      
         <div><a class="btn btn-primary download-btn" href="./assests/FSD IMP.pdf" download>Download PDF</a>
           <button class="btn btn-secondary view-btn" onclick="toggleViewer('manual2-viewer')">View PDF</button>
         </div>
@@ -158,6 +157,16 @@
           <button class="btn btn-secondary view-btn" onclick="toggleViewer('manual4-viewer')">View PDF</button>
         </div>
         <iframe id="manual4-viewer" class="pdf-viewer" src="./assests/ACA IMP.pdf"></iframe>
+      </div>
+
+      <div class="manual" id="manual5">
+
+        <h4>Fullstack Development - 21CS62</h4>
+      
+        <div><a class="btn btn-primary download-btn" href="./assests/21CS62(FSD) MQP ANS.pdf" download>Download PDF</a>
+          <button class="btn btn-secondary view-btn" onclick="toggleViewer('manual5-viewer')">View PDF</button>
+        </div>
+        <iframe id="manual5-viewer" class="pdf-viewer" src="./assests/21CS62(FSD) MQP ANS.pdf"></iframe>
       </div>
 
     </div>
