--- a/imp.html
+++ b/imp.html
@@ -161,7 +161,7 @@
 
       <div class="manual" id="manual5">
 
-        <h4>Fullstack Development - 21CS62</h4>
+        <h4>Fullstack Development Model QP with ANS - 21CS62</h4>
       
         <div><a class="btn btn-primary download-btn" href="./assests/21CS62(FSD) MQP ANS.pdf" download>Download PDF</a>
           <button class="btn btn-secondary view-btn" onclick="toggleViewer('manual5-viewer')">View PDF</button>
