--- a/Notes/SEPM.html
+++ b/Notes/SEPM.html
@@ -180,10 +180,10 @@
                     quality
                     management, Quality Management systems, process capability models, techniques to enhance software
                     quality, testing, Software reliability, quality plans. </p>
-                    <p style="color: red; font-weight: 800;">Coming Soon...</p>
-            <div>    <a class="btn btn-primary download-btn" href="./assests/module5.pdf" download>Download PDF</a>
+                  
+            <div>    <a class="btn btn-primary download-btn" href="../assests/SEPM 5th module.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module5-viewer')">View PDF</button></div>
-                <iframe id="module5-viewer" class="pdf-viewer" src="./assests/module5.pdf"></iframe>
+                <iframe id="module5-viewer" class="pdf-viewer" src="../assests/SEPM 5th module.pdf"></iframe>
             </div>
         </div>
     </div>
