--- a/Notes/SEPM.html
+++ b/Notes/SEPM.html
@@ -95,7 +95,7 @@
                         <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../notes.html">Notes</a>
+                        <a class="nav-link" href="../Notess.html">Notes</a>
                     <li class="nav-item">
                         <a class="nav-link" href="../qp.html">Question Paper</a>
                     </li>
