--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
   <div class="px-4 pt-5 my-5 text-center border-bottom " style="background-color: #ECE2D0;">
     <h1 class="display-4 fw-bold typing-text">Computer Science & Engineering</h1>
     <div class="col-lg-6 mx-auto">
+      
       <p class="lead mb-4 welcome ">Welcome to our website, where we are on a mission to provide Best Resources like
         Notes, Important Questions, Projects for Mainly 21 Scheme CSE Join <b> <a style="text-decoration: none !important; color: rgb(113, 202, 122);" href="https://chat.whatsapp.com/GE41XVeiIpvAKSPMi1BMiq">WhatsApp</a></b> Support Us If Any Queries Are there You Can Ask There</p>
         
     </div>
+    <h2 >7th Sem Notes Will Upload soon...</h2>
     <div  class="overflow-hidden " style="position: relative;">
       <div class="container px-5">
         <img src="./assests/img1.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700"
