--- a/Notes/BDA.html
+++ b/Notes/BDA.html
@@ -138,7 +138,7 @@
                     <p> <b>Essential Hadoop Tools (T2): </b> Using Apache Pig, Hive, Sqoop, Flume, Oozie, HBase.</p>
                <div> <a class="btn btn-primary download-btn" href="#" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module2-viewer')">View PDF</button></div>
-                <iframe id="module2-viewer" class="pdf-viewer" src="#"></iframe>
+                <iframe id="module2-viewer" class="pdf-viewer" src="../assests/bdamodule2"></iframe>
             </div>
             <div class="module" id="module3">
                 <h4>Module 3</h4>
