Notes Updated 7th sem

--- a/7thsem.html
+++ b/7thsem.html
@@ -75,7 +75,7 @@
                     <!-- <p class="card-text">Find all the notes for the 21 scheme CSE.</p> -->
                 </div>
             </a>
-            <a href="./Notes/IOTt.html"  class="card m-2 animated-card" style="width: 18rem;">
+            <a href="./Notes/IOT.html"  class="card m-2 animated-card" style="width: 18rem;">
                 <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title"><p>21CS735 </p> <p>Internet Of Things</p></h5>
