--- a/Notes/Dl.html
+++ b/Notes/Dl.html
@@ -141,11 +141,11 @@
                     Gradient-Based Learning, Back-Propagation and Other Differentiation Algorithms. Regularization for
                     Deep Learning</p>
 
-                <div> <a class="btn btn-primary download-btn" href="#" download>Download PDF</a>
+                <div> <a class="btn btn-primary download-btn" href="../assests/dlmodule2.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module2-viewer')">View
                         PDF</button>
                 </div>
-                <iframe id="module2-viewer" class="pdf-viewer" src="#"></iframe>
+                <iframe id="module2-viewer" class="pdf-viewer" src="../assests/dlmodule2.pdf"></iframe>
             </div>
             <div class="module" id="module3">
                 <h4>Module 3</h4>
@@ -155,11 +155,11 @@
                     Algorithms with Adaptive Learning Rates: The AdaGrad algorithm, The RMSProp algorithm, Choosing
                     the Right Optimization Algorithm.</p>
 
-                <div> <a class="btn btn-primary download-btn" href="#" download>Download PDF</a>
+                <div> <a class="btn btn-primary download-btn" href="../assests/dlmodule3.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module3-viewer')">View
                         PDF</button>
                 </div>
-                <iframe id="module3-viewer" class="pdf-viewer" src="../assests/bdamodule3"></iframe>
+                <iframe id="module3-viewer" class="pdf-viewer" src="../assests/dlmodule3.pdf"></iframe>
             </div>
             <div class="module" id="module4">
                 <h4>Module 4</h4>
@@ -169,11 +169,11 @@ Strong Prior, Variants of the Basic Convolution Function, Structured Outputs, Da
 Convolution Algorithms, Random or Unsupervised Features- LeNet, AlexNet.
                 </p>
 
-                <div> <a class="btn btn-primary download-btn" href="#" download>Download PDF</a>
+                <div> <a class="btn btn-primary download-btn" href="../assests/dlmodule4.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module4-viewer')">View
                         PDF</button>
                 </div>
-                <iframe id="module4-viewer" class="pdf-viewer" src="../assests/bdamodule4"></iframe>
+                <iframe id="module4-viewer" class="pdf-viewer" src="../assests/dlmodule4.pdf"></iframe>
             </div>
             <div class="module" id="module5">
                 <h4>Module 5</h4>
@@ -188,15 +188,15 @@ Convolution Algorithms, Random or Unsupervised Features- LeNet, AlexNet.
                     Large-Scale Deep Learning, Computer, Speech Recognition, Natural Language Processing 
                     and Other Applications.</p>
 
-                <div> <a class="btn btn-primary download-btn" href="#" download>Download PDF</a>
+                <div> <a class="btn btn-primary download-btn" href="../assests/dlmodule5.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module5-viewer')">View
                         PDF</button>
                 </div>
-                <iframe id="module5-viewer" class="pdf-viewer" src="../assests/bdamodule5"></iframe>
+                <iframe id="module5-viewer" class="pdf-viewer" src="../assests/dlmodule5.pdf"></iframe>
             </div>
         </div>
     </div>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
