--- a/Notes/OR.html
+++ b/Notes/OR.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-5305831131761128">
-    <title>IOT Notes</title>
+    <title>OR Notes</title>
     <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="../CSS/notes.css">
@@ -120,73 +120,16 @@
     <div class="container">
         <div class="module-container">
             <div class="module" id="module1">
-                <h4>Module 1</h4>
-                <p><b> Emergence of IoT: </b>
-                    Introduction, Evolution of IoT, Enabling IoT and the Complex Interdependence of 
-Technologies, IoT Networking Components, Addressing Strategies in IoT. 
-                </p>
+                <h4>Module 1-5 Theory</h4>
+                
                 <div>
-                    <a class="btn btn-primary download-btn" href="../assests/MODULE 1 IOT.pdf" download>Download PDF</a>
+                    <a class="btn btn-primary download-btn" href="../assests/OR 1-5_merged.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module1-viewer')">View
                         PDF</button>
                 </div>
-                <iframe id="module1-viewer" class="pdf-viewer" src="../assests/MODULE 1 IOT.pdf"></iframe>
+                <iframe id="module1-viewer" class="pdf-viewer" src="../assests/OR 1-5_merged.pdf"></iframe>
             </div>
-            <div class="module" id="module2">
-                <h4>Module 2</h4>
-                <p><b>IoT Sensing and Actuation:</b>  Introduction, Sensors, Sensor Characteristics, Sensorial Deviations, 
-                    Sensing Types, Sensing Considerations, Actuators, Actuator Types, Actuator Characteristics. </p>
-
-                <div> <a class="btn btn-primary download-btn" href="../assests/Module 2 IOT.pdf" download>Download PDF</a>
-                    <button class="btn btn-secondary view-btn" onclick="toggleViewer('module2-viewer')">View
-                        PDF</button>
-                </div>
-                <iframe id="module2-viewer" class="pdf-viewer" src="../assests/Module 2 IOT.pdf"></iframe>
-            </div>
-            <div class="module" id="module3">
-                <h4>Module 3</h4>
-                <p><b>IoT Processing Topologies and Types:</b> Data Format, Importance of Processing in IoT, Processing 
-                    Topologies, IoT Device Design and Selection Considerations, Processing Offloading.</p>
-
-                <div> <a class="btn btn-primary download-btn" href="../assests/Module 3 IOT.pdf" download>Download PDF</a>
-                    <button class="btn btn-secondary view-btn" onclick="toggleViewer('module3-viewer')">View
-                        PDF</button>
-                </div>
-                <iframe id="module3-viewer" class="pdf-viewer" src="../assests/Module 3 IOT.pdf"></iframe>
-            </div>
-            <div class="module" id="module4">
-                <h4>Module 4</h4>
-                <p><b>IoT Connectivity Technologies:</b>
-                     Introduction, IEEE 802.15.4, Zigbee, Thread, ISA100.11A, 
-                    WirelessHART, RFID, NFC, DASH7, Z-Wave, Weightless, Sigfox, LoRa, NB-IoT, Wi-Fi, Bluetooth
-                </p>
-
-                <div> <a class="btn btn-primary download-btn" href="../assests/Module 4 IOT.pdf" download>Download PDF</a>
-                    <button class="btn btn-secondary view-btn" onclick="toggleViewer('module4-viewer')">View
-                        PDF</button>
-                </div>
-                <iframe id="module4-viewer" class="pdf-viewer" src="../assests/Module 4 IOT.pdf"></iframe>
-            </div>
-            <div class="module" id="module5">
-                <h4>Module 5</h4>
-                <p><b> 
-                    IoT Communication Technologies: </b>
-                    Introduction, Infrastructure Protocols, Discovery Protocols, Data 
-                    Protocols, Identification Protocols, Device Management, Semantic Protocols 
-                    </p>
-                <b>IoT Interoperability: </b>
-                <p>
-                    Introduction, Taxonomy of interoperability, Standards, Frameworks</p>
-
-                <div> <a class="btn btn-primary download-btn" href="../assests/Module 5 IOT.pdf" download>Download PDF</a>
-                    <button class="btn btn-secondary view-btn" onclick="toggleViewer('module5-viewer')">View
-                        PDF</button>
-                </div>
-                <iframe id="module5-viewer" class="pdf-viewer" src="../assests/Module 5 IOT.pdf"></iframe>
-            </div>
-        </div>
-    </div>
-
+           <div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
