--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         Notes, Important Questions, Projects for Mainly 21 Scheme CSE Join <b> <a style="text-decoration: none !important; color: rgb(113, 202, 122);" href="https://chat.whatsapp.com/GE41XVeiIpvAKSPMi1BMiq">WhatsApp</a></b> Support Us If Any Queries Are there You Can Ask There</p>
         
     </div>
-    <h2 >7th Sem Notes Will Upload soon...</h2>
+    <!-- <h2 >7th Sem Notes Will Upload soon...</h2> -->
     <div  class="overflow-hidden " style="position: relative;">
       <div class="container px-5">
         <img src="./assests/img1.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700"
